crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.ForceLink.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "enabled",
        [
            "true",
        ],
    ),
    (
        "distance",
        [
            "60.0",
        ],
    ),
    (
        "iterations",
        [
            "3",
        ],
    ),
]
