crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.blueprint.archetypes.LineGrid3D.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "visible",
        [
            "true",
        ],
    ),
    (
        "spacing",
        [
            "1.0",
        ],
    ),
    (
        "plane",
        [
            "[0.0, 0.0, 1.0, 0.0]",
        ],
    ),
    (
        "stroke_width",
        [
            "1.0",
        ],
    ),
    (
        "color",
        [
            "2155905084",
        ],
    ),
]
